src/compile_warnings.txt
utility/memory/memory_allocation_soft/memory_allocation_soft.c: In function ‘memory_allocation_soft’:
utility/memory/memory_allocation_soft/memory_allocation_soft.c:7:9: warning: implicit declaration of function ‘log_error’ [-Wimplicit-function-declaration]
    7 |         log_error("Memory allocation failed (soft)\n");
      |         ^~~~~~~~~
utility/memory/memory_copy/memory_copy.c: In function ‘memory_copy’:
utility/memory/memory_copy/memory_copy.c:5:12: warning: implicit declaration of function ‘memcpy’ [-Wimplicit-function-declaration]
    5 |     return memcpy(destination, source, size);
      |            ^~~~~~
utility/memory/memory_copy/memory_copy.c:2:1: note: include ‘<string.h>’ or provide a declaration of ‘memcpy’
    1 | #include <utility/memory/memory_copy/memory_copy.h>
  +++ |+#include <string.h>
    2 | 
utility/memory/memory_copy/memory_copy.c:5:12: warning: incompatible implicit declaration of built-in function ‘memcpy’ [-Wbuiltin-declaration-mismatch]
    5 |     return memcpy(destination, source, size);
      |            ^~~~~~
utility/memory/memory_copy/memory_copy.c:5:12: note: include ‘<string.h>’ or provide a declaration of ‘memcpy’
utility/memory/memory_move/memory_move.c: In function ‘memory_move’:
utility/memory/memory_move/memory_move.c:6:9: warning: implicit declaration of function ‘log_fatal’ [-Wimplicit-function-declaration]
    6 |         log_fatal("memory_move received NULL pointers\n");
      |         ^~~~~~~~~
utility/memory/memory_move/memory_move.c:8:5: warning: implicit declaration of function ‘memmove’ [-Wimplicit-function-declaration]
    8 |     memmove(dest, src, size);
      |     ^~~~~~~
utility/memory/memory_move/memory_move.c:2:1: note: include ‘<string.h>’ or provide a declaration of ‘memmove’
    1 | #include <utility/memory/memory_move/memory_move.h>
  +++ |+#include <string.h>
    2 | 
utility/memory/memory_move/memory_move.c:8:5: warning: incompatible implicit declaration of built-in function ‘memmove’ [-Wbuiltin-declaration-mismatch]
    8 |     memmove(dest, src, size);
      |     ^~~~~~~
utility/memory/memory_move/memory_move.c:8:5: note: include ‘<string.h>’ or provide a declaration of ‘memmove’
utility/memory/memory_realloc/memory_realloc.c: In function ‘memory_realloc’:
utility/memory/memory_realloc/memory_realloc.c:7:9: warning: implicit declaration of function ‘log_fatal’ [-Wimplicit-function-declaration]
    7 |         log_fatal("memory_realloc failed for size: %zu\n", new_size);
      |         ^~~~~~~~~
utility/string/string_hash/string_hash.c:3:22: warning: ‘string_hash’ defined but not used [-Wunused-function]
    3 | static unsigned long string_hash(const char* str)
      |                      ^~~~~~~~~~~
utility/string/string_duplicate/string_duplicate.c: In function ‘string_duplicate’:
utility/string/string_duplicate/string_duplicate.c:5:18: warning: implicit declaration of function ‘string_length’ [-Wimplicit-function-declaration]
    5 |     size_t len = string_length(s) + 1;
      |                  ^~~~~~~~~~~~~
utility/string/string_duplicate/string_duplicate.c: At top level:
utility/string/string_duplicate/string_duplicate.c:3:14: warning: ‘string_duplicate’ defined but not used [-Wunused-function]
    3 | static char* string_duplicate(const char* s)
      |              ^~~~~~~~~~~~~~~~
In file included from /mnt/c/Users/ALI/Projects/Salam/src/utility/array/array_append/array_append.h:1,
                 from utility/array/array_append/array_append.c:1:
/mnt/c/Users/ALI/Projects/Salam/src/utility/array/array_resize/array_resize.h:4:12: warning: ‘array_resize’ used but never defined
    4 | static int array_resize(array_t* array, size_t new_capacity);
      |            ^~~~~~~~~~~~
In file included from utility/array/array_create/array_create.c:1:
/mnt/c/Users/ALI/Projects/Salam/src/utility/array/array_create/array_create.h:4:23: error: unknown type name ‘array_free_func’; did you mean ‘array_free_func_t’?
    4 | array_t* array_create(array_free_func freer);
      |                       ^~~~~~~~~~~~~~~
      |                       array_free_func_t
utility/array/array_create/array_create.c: In function ‘array_create’:
utility/array/array_create/array_create.c:10:20: warning: implicit declaration of function ‘memory_allocation_soft’; did you mean ‘memory_allocation’? [-Wimplicit-function-declaration]
   10 |     array->items = memory_allocation_soft(sizeof(void*) * array->capacity);
      |                    ^~~~~~~~~~~~~~~~~~~~~~
      |                    memory_allocation
utility/array/array_create/array_create.c:10:18: warning: assignment to ‘void **’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   10 |     array->items = memory_allocation_soft(sizeof(void*) * array->capacity);
      |                  ^
utility/array/array_create/array_create.c:12:9: warning: implicit declaration of function ‘memory_free’ [-Wimplicit-function-declaration]
   12 |         memory_free(array);
      |         ^~~~~~~~~~~
In file included from utility/array/array_delete/array_delete.c:1:
/mnt/c/Users/ALI/Projects/Salam/src/utility/array/array_delete/array_delete.h:3:18: error: unknown type name ‘array_t’
    3 | int array_delete(array_t* array, size_t index);
      |                  ^~~~~~~
utility/array/array_delete/array_delete.c:3:18: error: unknown type name ‘array_t’
    3 | int array_delete(array_t* array, size_t index)
      |                  ^~~~~~~
In file included from /mnt/c/Users/ALI/Projects/Salam/src/utility/array/array_prepend/array_prepend.h:2,
                 from utility/array/array_prepend/array_prepend.c:1:
/mnt/c/Users/ALI/Projects/Salam/src/utility/array/array_resize/array_resize.h:4:12: warning: ‘array_resize’ used but never defined
    4 | static int array_resize(array_t* array, size_t new_capacity);
      |            ^~~~~~~~~~~~
utility/array/array_resize/array_resize.c:3:12: warning: ‘array_resize’ defined but not used [-Wunused-function]
    3 | static int array_resize(array_t* array, size_t new_capacity)
      |            ^~~~~~~~~~~~
In file included from /mnt/c/Users/ALI/Projects/Salam/src/utility/hashmap/hashmap_put/hashmap_put.h:6,
                 from utility/hashmap/hashmap_put/hashmap_put.c:1:
/mnt/c/Users/ALI/Projects/Salam/src/utility/string/string_duplicate/string_duplicate.h:7:14: warning: ‘string_duplicate’ used but never defined
    7 | static char* string_duplicate(const char* s);
      |              ^~~~~~~~~~~~~~~~
In file included from /mnt/c/Users/ALI/Projects/Salam/src/utility/hashmap/hashmap_put/hashmap_put.h:8:
/mnt/c/Users/ALI/Projects/Salam/src/utility/string/string_hash/string_hash.h:1:22: warning: ‘string_hash’ used but never defined
    1 | static unsigned long string_hash(const char* str);
      |                      ^~~~~~~~~~~
In file included from /mnt/c/Users/ALI/Projects/Salam/src/utility/hashmap/hashmap_remove/hashmap_remove.h:3,
                 from utility/hashmap/hashmap_remove/hashmap_remove.c:1:
/mnt/c/Users/ALI/Projects/Salam/src/utility/string/string_hash/string_hash.h:1:22: warning: ‘string_hash’ used but never defined
    1 | static unsigned long string_hash(const char* str);
      |                      ^~~~~~~~~~~
